--- a/insee-promotion-client/package.json
+++ b/insee-promotion-client/package.json
@@ -29,7 +29,8 @@
     "react-router-redux": "^4.0.8",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
