--- a/insee-promotion-client/package.json
+++ b/insee-promotion-client/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.1.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -70,7 +70,6 @@
     "open": "0.0.5",
     "prettier": "^1.14.3",
     "prompt": "1.0.0",
-    "react-addons-test-utils": "15.6.2",
     "redux-immutable-state-invariant": "2.1.0",
     "replace": "1.0.0",
     "rimraf": "2.6.2",
