--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 insee-promotion-client/node_modules/
+insee-promotion-admin-client/node_modules/
 
 CorporateServer/CorporateServer/.idea/libraries/
 
