--- a/insee-promotion-client/package.json
+++ b/insee-promotion-client/package.json
@@ -27,6 +27,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
+    "react-scripts": "^4.0.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
@@ -55,6 +56,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-watch": "4.0.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "2.0.0",
