--- a/insee-promotion-admin-client/package.json
+++ b/insee-promotion-admin-client/package.json
@@ -30,6 +30,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "^4.0.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
