--- a/insee-promotion-client/package.json
+++ b/insee-promotion-client/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.1.0",
     "react": "^17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
