--- a/insee-promotion-admin-client/package.json
+++ b/insee-promotion-admin-client/package.json
@@ -21,9 +21,6 @@
   "author": "MinhNVC",
   "dependencies": {
     "@babel/preset-env": "^7.1.0",
-    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
-    "@ckeditor/ckeditor5-editor-balloon": "^24.0.0",
-    "@ckeditor/ckeditor5-react": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
@@ -32,6 +29,7 @@
     "react-router-redux": "^4.0.8",
     "react-s-alert": "^1.4.1",
     "react-scripts": "^4.0.1",
+    "react-select": "^3.1.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
