--- a/insee-promotion-client/package.json
+++ b/insee-promotion-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "insee-promotion-client",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A Javascript Framework for WebApp. React, Redux, Redux Saga, ES6, ...",
   "engines": {
     "npm": ">=6"
@@ -21,6 +21,7 @@
   "author": "MinhNVC",
   "dependencies": {
     "@babel/preset-env": "^7.1.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
