--- a/insee-promotion-client/.babelrc
+++ b/insee-promotion-client/.babelrc
@@ -1,4 +1,48 @@
 {
-  "plugins": ["@babel/plugin-proposal-class-properties", "@babel/plugin-transform-runtime"],
-  "presets": ["@babel/preset-env","@babel/preset-react"]
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ],
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": false,
+        "helpers": true,
+        "regenerator": true,
+        "useESModules": false
+      }
+    ],
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-optional-chaining"
+  ],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        },
+        "corejs": "3",
+        "useBuiltIns": "usage",
+        "modules": "cjs"
+      }
+    ],
+    "@babel/react"
+  ],
+  "env": {
+    "production": {
+      "plugins": [
+        "transform-remove-console"
+      ]
+    }
+  }
 }
