--- a/insee-promotion-client/package.json
+++ b/insee-promotion-client/package.json
@@ -1,26 +1,21 @@
 {
   "name": "insee-promotion-client",
-  "version": "1.0.5",
-  "description": "A Javascript Framework for WebApp. React, Redux, Redux Saga, ES6, ...",
-  "engines": {
-    "npm": ">=6"
-  },
+  "version": "1.0.0",
+  "description": "zalo-ai-client",
+  "main": "index.js",
+  "author": "trungnd",
+  "license": "ISC",
+  "private": true,
+  "browserslist": [
+    "last 2 versions",
+    "safari >= 7"
+  ],
   "scripts": {
-    "start-message": "babel-node tools/startMessage.js",
-    "prestart": "npm-run-all --parallel start-message",
-    "start": "npm-run-all --parallel open:src",
-    "open:src": "babel-node tools/srcServer.js",
-    "open:dist": "babel-node tools/distServer.js",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "rimraf ./dist",
-    "build:production": "npm run clean-dist && babel-node tools/build.js && npm run open:dist",
-    "build:staging": "npm run clean-dist && babel-node tools/buildStaging.js && npm run open:dist",
-    "analyze-bundle": "babel-node ./tools/analyzeBundle.js",
-    "format": "prettier --write --single-quote --no-semi --print-width 160  'app/**/*.js'"
+    "start": "webpack-dev-server --config ./webpack.config.dev.js --mode development",
+    "build-staging": "rm -rf ./build && NODE_ENV=development  webpack --config ./webpack.config.staging.js --mode production",
+    "build-prod": "rm -rf ./build &&  NODE_ENV=production  webpack --config ./webpack.config.prod.js --mode production"
   },
-  "author": "MinhNVC",
   "dependencies": {
-    "@babel/preset-env": "^7.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
@@ -32,59 +27,62 @@
     "react-scripts": "^4.0.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "webpack-bundle-analyzer": "^4.4.0",
     "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "autoprefixer": "9.1.5",
-    "babel-loader": "^8.0.2",
-    "browser-sync": "2.24.7",
-    "chai": "4.1.2",
-    "chalk": "2.4.1",
-    "connect-history-api-fallback": "1.5.0",
-    "coveralls": "3.0.2",
-    "cross-env": "5.2.0",
-    "css-loader": "1.0.0",
-    "enzyme": "3.6.0",
-    "eslint": "5.6.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-watch": "4.0.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "2.0.0",
-    "html-webpack-plugin": "3.2.0",
-    "isparta": "4.1.0",
-    "istanbul": "0.4.5",
-    "jsdom": "12.0.0",
-    "json-loader": "0.5.7",
-    "lodash": "4.17.11",
-    "mocha": "5.2.0",
-    "mockdate": "2.0.2",
-    "npm-run-all": "4.1.3",
-    "open": "0.0.5",
-    "prettier": "^1.14.3",
-    "prompt": "1.0.0",
-    "redux-immutable-state-invariant": "2.1.0",
-    "replace": "1.0.0",
-    "rimraf": "2.6.2",
-    "sinon": "6.3.4",
-    "sinon-chai": "3.2.0",
-    "style-loader": "0.23.0",
-    "url-loader": "1.1.1",
-    "webpack": "4.19.1",
-    "webpack-bundle-analyzer": "3.0.2",
-    "webpack-dev-middleware": "3.3.0",
-    "webpack-hot-middleware": "2.24.0",
-    "webpack-md5-hash": "0.0.6"
+    "@babel/runtime": "^7.4.4",
+    "@svgr/webpack": "^4.3.0",
+    "autoprefixer": "^9.5.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "browserslist": "^4.6.6",
+    "copy-webpack-plugin": "^5.1.1",
+    "core-js": "^3.5.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-babel-module": "^5.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "path": "^0.12.7",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^2.2.1",
+    "redux-devtools-extension": "^2.13.8",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
+    "to-string-loader": "^1.1.5",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-md5-hash": "^0.0.6",
+    "yarn": "^1.22.4"
   }
 }
