--- a/insee-promotion-client/.babelrc
+++ b/insee-promotion-client/.babelrc
@@ -22,26 +22,17 @@
       }
     ],
     "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-proposal-optional-chaining"
+    "@babel/plugin-proposal-optional-chaining",
+    "syntax-dynamic-import"
   ],
   "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "esmodules": true
-        },
-        "corejs": "3",
-        "useBuiltIns": "usage",
-        "modules": "cjs"
-      }
-    ],
+    "@babel/preset-env",
     "@babel/react"
   ],
   "env": {
     "production": {
       "plugins": [
-        "transform-remove-console"
+        // "transform-remove-console"
       ]
     }
   }
