--- a/insee-promotion-admin-client/package.json
+++ b/insee-promotion-admin-client/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@babel/preset-env": "^7.1.0",
     "antd": "^4.11.2",
+    "highcharts": "^9.0.1",
+    "highcharts-react-official": "^3.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "17.0.1",
